corrected spacing for Header component

--- a/youtube-clone/src/components/Header/index.css
+++ b/youtube-clone/src/components/Header/index.css
@@ -54,6 +54,7 @@
 }
 
 .header__group-two > button {
+  margin-left: 1rem;
   background-color: var(--grey);
 }
 
